Add opengraph image and tags

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta property="og:title" content="Citizen Watch" />
+    <meta
+      property="og:description"
+      content="A replica of the Citizen Quartz Multi Alarm III watch based on figure 31 in David Harel’s 1987 paper introducing statecharts"
+    />
+    <meta
+      property="og:url"
+      content="https://andyjakubowski.github.io/statechart-watch/"
+    />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:image" content="%PUBLIC_URL%/opengraph.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Citizen Watch" />
+    <meta property="twitter:card" content="summary_large_image" />
     <title>Citizen Watch</title>
   </head>
   <body>
